--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -100,8 +100,8 @@
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    var(--vp-c-gray-1) 50%,
-    var(--vp-c-gray-1)
+    #3a424a 50%,
+    #3a424a
   );
   --vp-home-hero-image-filter: blur(44px);
 }
